@@ -14,3 +14,4 @@
 	  * Added automatism for creating releases
 
 0.4.0 * Adaptions to support LLVM/clang
+      * Added Garbage Collector MARK_AND_SWEEP
